--- a/css/styles.css
+++ b/css/styles.css
@@ -5,19 +5,18 @@
     --secondary-color: #2e2f42;
     /* --navy-blue-color: #2E2F42; */
 }
-/* 
+
+*,
 *::before,
-::after {
-    box-sizing: border-box;
-} */
+*::after {
+  box-sizing: border-box;
+}
 
 body {
     font-family: var(--main-font);
     font-style: normal;
     color: #434455;
     background-color:  #FFFFFF;
-    /* width: 1440px; */
-    box-sizing: border-box;
 }
 
 h1, h2, h3, p {
@@ -63,11 +62,10 @@ background-color: #404BBF ;
 
 .container {
     width: 1128px;
-    /* height: 600px; */
-    padding-top: 120px;
-    padding-bottom: 120px;
-    padding-left: 15px;
-    padding-right: 15px;
+    /* padding-top: 120px; */
+    /* padding-bottom: 120px; */
+    margin-left: 15px;
+    margin-right: 15px;
     background-color: #cccccc;
     outline: 2px solid red;
 }
@@ -80,24 +78,21 @@ background-color: #404BBF ;
     list-style: none;
     margin: 0px;
     padding: 0px;
+
+    display: flex;
 }
 
 .link {
     text-decoration: none;
-    /* margin: 0px; */
 }
 
 .component-list {
-
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    
     color: var(--secondary-color);
-
-    padding-top: 120px;
-    /* padding-bottom: 120px; */
+    /* padding-top: 120px; */
     }
     
 .component-list-item {
@@ -122,18 +117,12 @@ background-color: #404BBF ;
 /* =============/Components============== */
 /* =============HEADER============== */
 
-/* .div-navigation {
-    display: inline-block;
-    width: 1128px;
-    /* height: 72px; */
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
-    background-color: #cccccc; */
+.div-navigation {
+
 }
 
 .navigation {
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
+
 }
 
 .logo-web {
@@ -166,27 +155,24 @@ background-color: #404BBF ;
 
 
 
-.menu-item {
-    
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
+.menu-item {   
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
-color: var(--secondary-color)
+    color: var(--secondary-color)
 }
 
 .adress {
     font-style: normal;
 }
 .contact {
-    
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-
-color: #434455;
+    color: #434455;
 }
 
 /* =============/HEADER============== */
@@ -194,14 +180,13 @@ color: #434455;
 
 .hero-section{
     box-sizing: border-box;
-    outline: 5px solid teal;
+    outline: 2px solid wheat;
     background-color: teal;
     padding-top: 188px;
     padding-bottom: 188px;
     width: 1440px;
  
-
-background: #2E2F42;
+    background: #2E2F42;
 }
 
 .hero-section .hero-title {
@@ -214,8 +199,8 @@ background: #2E2F42;
     letter-spacing: 0.02em;
 
     color: #FFFFFF;
+
     margin-top: 0; 
-    
     margin-bottom: 48px;
     padding-top: 0;
     margin-left: auto;
@@ -224,11 +209,10 @@ background: #2E2F42;
     height: 120px;
 
    
-    outline: 5px solid red;
+    outline: 2px solid blue;
 }
 
 .hero-btn {
-    /* display: block; */
     box-sizing: border-box;
     font-family: var(--main-font);
     font-weight: 500;
@@ -239,24 +223,10 @@ background: #2E2F42;
     padding: 16px, 32px, 16px, 32px;
     margin-left: auto;
     margin-right: auto;
-    
     letter-spacing: 0.04em;
 
     color: #FFFFFF;
 
-    /* margin-bottom: 188px; */
-    /* display: flex; */
-    /* text-align: center; */
-    /* flex-direction: row;
-    align-items: flex-start; */
-    /* padding: 16px 32px; */
-    /* gap: 10px;
-
-    position: absolute;
-    width: 170px;
-    height: 51px;
-    left: 635px;
-top: 432px; */
     cursor: pointer;
 
     background: #4D5AE5;
@@ -266,23 +236,25 @@ top: 432px; */
 
 .title-section-two {
     font-weight: 500;
-    outline: 3px solid tomato;
-    /* padding-top: 120px; */
+    outline: 2px solid tomato;
 }
 
-.features-list {
+.features-list:nth-child(n + 2) {
     display: block;
     box-sizing: border-box;
     outline: 2px solid purple;
-    /* padding-top: 120px; */
+ 
 }
 
 .features-item {
     display: block;
     box-sizing: border-box;
+    /* width: 264px;
+    height: 104px; */
     outline: 2px solid red;
 
 }
+
 
 .about-work-section {
     display: block;
@@ -291,16 +263,28 @@ top: 432px; */
     background-color: #cccccc;
 }
 
+.work-list {
+    display: flex;
+
+}
+
+.list .item:nth-last-child(2) {
+    padding-left: 24px;
+    padding-right: 24px;
+
+}
+
 .title-section-three {
 
-font-weight: 600;
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 
-color: #2E2F42;
+    color: #2E2F42;
+    margin-bottom: 72px;
 }
 
 .team-section {
