--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ background-color: #404BBF ;
 /* =============Components============== */
 
 .container {
+    display: flex;
+    align-items: center;
     width: 1158px;
     /* padding-top: 120px; 
     padding-bottom: 120px; */
@@ -145,18 +147,18 @@ background-color: #404BBF ;
 /* =============/Components============== */
 /* =============HEADER============== */
 
-.div-navigation {
-
+.navigation {
+    border-bottom: 1px solid #e7e9fc
 }
 
-.header-wrap {
+/* .header-wrap {
     display: flex;
     
-    height: 72px;
+    height: 72px; */
     /* margin-left: 156px;
-    margin-right: 156px; */
+    margin-right: 156px;
 
-}
+} */
 
 .navigation {
     /* display: flex; */
