--- a/css/styles.css
+++ b/css/styles.css
@@ -170,14 +170,16 @@ background-color: #404BBF ;
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    padding-left: 156px;
+    /* padding-left: 156px; */
     gap: 40px;
+    margin-left: 71px;
 }
 
 .header-btn-wrap {
     display: flex;
-    align-items: center;
-    justify-content: start;
+    /* align-items: center; */
+    /* justify-content: start; */
+    margin-right: 76px;
     /* outline: 2px solid red; */
     /* padding-left: 141px; */
 }
@@ -267,8 +269,6 @@ background-color: #404BBF ;
 
 .hero-section{
     box-sizing: border-box;
-    /* outline: 2px solid wheat;
-    background-color: teal; */
     padding-top: 188px;
     padding-bottom: 188px;
     width: 1440px;
@@ -292,7 +292,7 @@ background-color: #404BBF ;
     padding-top: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 496px;
+    max-width: 496px;
     height: 120px;
 
    
@@ -305,8 +305,10 @@ background-color: #404BBF ;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
-    align-items: center;
+    display: block;
+    /* align-items: center; */
+    min-width: 169px;
+    height: 56px;
     padding: 16px 32px 16px 32px;
     margin-left: auto;
     margin-right: auto;
@@ -315,6 +317,7 @@ background-color: #404BBF ;
     color: #FFFFFF;
 
     cursor: pointer;
+    border: none;
 
     background: #4D5AE5;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -330,7 +333,7 @@ background-color: #404BBF ;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 120px;
+    padding: 120px 0;
     /* max-height: 104px; */
 }
 
@@ -359,10 +362,10 @@ background-color: #404BBF ;
     align-content: center;
     gap: 8px;
 
-    min-width: 264px;
+    /* min-width: 264px; */
     height: 104px;
-    /* outline: 2px solid red; */
-
+    outline: 2px solid red;
+    width: calc((100% - 72px) / 4);
 }
 
 .features-list-item {
