--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ background-color: #404BBF ;
 }
 
 .component-list {
-    /* display: block; */
+     
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -113,6 +113,7 @@ background-color: #404BBF ;
     display: flex;
     justify-content: start;
     align-items: start;
+    margin-bottom: 8px;
     }
     
 .component-list-item {
@@ -121,9 +122,9 @@ background-color: #404BBF ;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
-    
+    text-align: center; 
     color: #434455;
-    display: flex;
+    /* display: flex; */
     /* margin: 0 auto; */
     justify-content: center;
     }
@@ -134,6 +135,7 @@ background-color: #404BBF ;
     line-height: 1.2;
     text-align: center;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 
     color: var(--secondary-color);
     background-color: #FFFFFF;
@@ -356,15 +358,16 @@ background-color: #404BBF ;
 
 .features-item {
     display: flex;
+    /* flex-wrap: wrap; */
     flex-direction: column;
     /* flex-grow: 1; */
     box-sizing: border-box;
     align-content: center;
-    gap: 8px;
+    /* gap: 8px; */
 
     /* min-width: 264px; */
-    height: 104px;
-    outline: 2px solid red;
+    max-height: 104px;
+    /* outline: 2px solid red; */
     width: calc((100% - 72px) / 4);
 }
 
@@ -412,18 +415,20 @@ background-color: #404BBF ;
 
 .team-section {
     background-color: #F4F4FD ;
-    padding-bottom: 120px;
+    padding-bottom: 120px 0;
 }
 
 .team-item {
     flex-wrap: wrap;
-    margin: 32px 16px;
+    padding: 32px 16px;
+    /* margin: 32px 16px;
     max-width: 232px;
-    max-height: 56px;
+    max-height: 56px; */
 }
 
 .team-card {
     background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
 }
 
 /* =============/MAIN============== */
