--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ background-color: #404BBF ;
 .portfolio-menu-btn:focus {
     color: #FFFFFF;
     background-color: #404BBF;
+    border: 1px solid transparent;
 }
 
 /* =============/HOVERS&FOCUS============== */
@@ -199,6 +200,7 @@ background-color: #404BBF ;
     width: 44px;
     height: 21px;
     padding: 24px 0;
+    margin-bottom: 16px;
 }
 
 .logo-studio {
@@ -214,6 +216,7 @@ background-color: #404BBF ;
     width: 71px;
     height: 21px;
     padding: 24px 0;
+    margin-bottom: 16px;
 
     margin-right: 76px;
 }
@@ -415,7 +418,7 @@ background-color: #404BBF ;
 
 .team-section {
     background-color: #F4F4FD ;
-    padding-bottom: 120px 0;
+    padding: 120px 0;
 }
 
 .team-item {
@@ -436,18 +439,21 @@ background-color: #404BBF ;
 .footer {
     background-color: #2e2f42;
     width: 1440px;
-    height: 312px;  
+    height: 312px; 
+    padding: 100px 0; 
 }
 
 .footer-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
+    align-content: center;
+    justify-content: start;
+    /* gap: 16px; */
     width: 264px;
-    height: 116px;
-    padding-top: 100px;
+    height: 112px;
+    /* padding-top: 100px; */
     margin-right: 1020px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
     margin-left: 156px;
 }
 
@@ -456,21 +462,27 @@ background-color: #404BBF ;
 }
 
 .footer-tips {
+    display: inline;
+    max-width: 264px;
 
-font-size: 16px;
-line-height: 24px;
-letter-spacing: 0.02em;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 
-color: #E7E9FC;
+    color: #E7E9FC;
 }
 /* =============/FOOTER============== */
 /* ================MAIN-portfolio=================== */
 
+.portfolio-menu {
+    padding: 96px 0 120px;
+}
 
 .portfolio-btn-section {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 72px;
 }
 
 .portfolio-menu-btn {
@@ -520,9 +532,10 @@ color: #E7E9FC;
 
     display: flex;
     flex-wrap: wrap;
-    
+    column-gap: 24px; 
+    row-gap: 48px;
     /* width: 1158px; */
-    gap: 48px 24px;
+    /* gap: 48px 24px; */
 }
 
 .portfolio-img-section.link {
@@ -544,11 +557,14 @@ color: #E7E9FC;
 .portfolio-card {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    /* justify-content: flex-start;
+    align-items: flex-start; */
     width: 360px;
     height: 420px;
     flex-direction: column;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
     
 }
 
@@ -563,14 +579,15 @@ color: #E7E9FC;
        margin-top: 32px;
        padding-left: 16px;
        /* padding-right: 202px; */
-       padding-bottom: 8px;
+       margin-bottom: 8px;
        display: flex;
        justify-content: start;
        align-items: start;
+       flex-wrap: wrap;
 }
 
 .portfolio-list-item {
-    display: block;
+    /* display: block; */
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -590,8 +607,7 @@ color: #E7E9FC;
     width: 1158px;
 }
 
-/* .portfolio-menu-btn:hover, 
-.portfolio-menu-btn:focus {
+.portfolio-menu-btn {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -602,19 +618,29 @@ color: #E7E9FC;
     text-align: center;
     letter-spacing: 0.04em;
     
-    color: #FFFFFF;
+    color: #404BBF;
 
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 12px 24px;
+    /* padding: 12px 24px;
     width: 69px;
-    height: 48px;
-    background: #404BBF;
+    height: 48px; */
+    background: #FFFFFF;;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     flex: none;
     order: 0;
     flex-grow: 0;
-} */
+}
+
+.item-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc((100% - 48px) / 3);
+    height: 420px;
+    flex-direction: column;
+    /* flex-basis: calc((100% - 20px) / 3); */
+    border: 1px solid #E7E9FC;
+}
 /* ================/MAIN-portfolio=================== */
