update css hw 03-6

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ background-color: #404BBF ;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    display: inline-block;
+    display: flex;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -200,7 +200,8 @@ background-color: #404BBF ;
     width: 44px;
     height: 21px;
     padding: 24px 0;
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
+    margin-right: 76px; 
 }
 
 .logo-studio {
@@ -208,7 +209,7 @@ background-color: #404BBF ;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    display: inline-block;
+    display: flex;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -216,7 +217,7 @@ background-color: #404BBF ;
     width: 71px;
     height: 21px;
     padding: 24px 0;
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
 
     margin-right: 76px;
 }
@@ -246,8 +247,9 @@ background-color: #404BBF ;
 
 .adress-wrap-list {
     display: flex;
-    padding-left: 322px;
     gap: 40px;
+    padding-left: 322px;
+    
 }
 
 
