--- a/css/styles.css
+++ b/css/styles.css
@@ -461,7 +461,7 @@ background-color: #404BBF ;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    display: flex;
+    display: inline-block;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
