--- a/css/styles.css
+++ b/css/styles.css
@@ -442,8 +442,8 @@ background-color: #404BBF ;
     height: 312px; 
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-right: 1020px;
-    padding-left: 156px;
+    /* padding-right: 1020px;
+    padding-left: 156px; */
 
 }
 
