--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,7 @@ background-color: #404BBF ;
 .title-section-three {
     display: flex;
     justify-content: center;
-    padding-top: 120px;
+    /* padding-top: 120px; */
     margin-bottom: 72px;
 
     font-weight: 600;
@@ -421,6 +421,9 @@ background-color: #404BBF ;
 }
 
 .team-item {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     flex-wrap: wrap;
     padding: 32px 16px;
     /* margin: 32px 16px;
@@ -572,7 +575,7 @@ background-color: #404BBF ;
     display: flex;
     flex-wrap: wrap;
     width: 360px;
-    height: 420px;
+    /* height: 420px; */
     flex-direction: column;
     /* flex-basis: calc((100% - 20px) / 3); */
     border: 1px solid #E7E9FC;
