--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ background-color: #404BBF ;
      padding-left: 15px;
      padding-right: 15px; 
 
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
 }
 
 .second-container {
@@ -92,7 +92,7 @@ background-color: #404BBF ;
     padding: 0;
 
     display: flex;
-    flex-wrap: ;
+    justify-content: space-between;
     
     /* width: 1158px; */
     gap: 24px;
@@ -100,7 +100,7 @@ background-color: #404BBF ;
 
 .link {
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .component-list {
@@ -119,7 +119,7 @@ background-color: #404BBF ;
     
 .component-list-item {
     display: contents;
-    font-weight: 500;
+    /* font-weight: 500; */
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
@@ -155,7 +155,7 @@ background-color: #404BBF ;
 
 .header-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     
     /* height: 72px;    */
@@ -210,9 +210,9 @@ background-color: #404BBF ;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--secondary-color);
-    width: 71px;
+    /* width: 71px;
     height: 21px;
-    padding: 24px 0;
+    padding: 24px 0; */
     /* margin-bottom: 16px; */
 
     margin-right: 76px;
@@ -226,7 +226,7 @@ background-color: #404BBF ;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0;
+    /* padding: 24px 0; */
 
     color: var(--secondary-color)
 }
@@ -245,7 +245,7 @@ background-color: #404BBF ;
 .adress-wrap-list {
     display: flex;
     gap: 40px;
-    padding-left: 322px;
+    /* padding-left: 322px; */
     
 }
 
@@ -337,7 +337,7 @@ background-color: #404BBF ;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 120px 0;
+    padding-top: 120px;
     /* max-height: 104px; */
 }
 
@@ -390,6 +390,7 @@ background-color: #404BBF ;
 
 .work-list {
     display: flex;
+    justify-content: space-between;
 
 }
 
@@ -510,7 +511,8 @@ background-color: #404BBF ;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 72px;
+    /* margin-bottom: 72px; */
+    padding-bottom: 72px;
 }
 
 .portfolio-menu-btn {
@@ -531,8 +533,8 @@ background-color: #404BBF ;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 108px;
-    margin-bottom: 84px;
+    /* margin-top: 108px; */
+    /* margin-bottom: 84px; */
     padding: 12px 24px;
     /* width: 116px; */
     height: 48px;
@@ -590,7 +592,7 @@ background-color: #404BBF ;
     /* width: 360px;
     height: 420px; */
     flex-direction: column;
-    padding: 32px 16px;
+    padding-bottom: 32px;
     border: 1px solid #e7e9fc;
     border-top: none;
     
@@ -604,10 +606,11 @@ background-color: #404BBF ;
        letter-spacing: 0.02em;
        color: var(--secondary-color);
        /* padding-top: 120px; */
-       margin-top: 32px;
-       padding-left: 16px;
+       /* margin-top: 32px;
+       padding-left: 16px; */
        /* padding-right: 202px; */
-       margin-bottom: 8px;
+       padding-bottom: 8px;
+       padding-left: 16px;
        display: flex;
        justify-content: start;
        align-items: start;
@@ -625,7 +628,7 @@ background-color: #404BBF ;
     display: flex;
     /* margin: 0 auto; */
     margin-top: 0;
-    margin-left: 16px;
+    padding-left: 16px;
     justify-content: center;
 }
 
