hope last fix hw 03

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ background-color: #404BBF ;
     color: var(--main-color);
     width: 44px;
     height: 21px;
-    /* padding: 24px 0; */
+    padding: 24px 0;
     /* margin-bottom: 16px; */
     margin-right: 76px; 
 }
@@ -329,10 +329,10 @@ background-color: #404BBF ;
     border-radius: 4px;
 }
 
-.title-section-two {
-    font-weight: 500;
+/* visually-hidden.title-section-two { */
+    /* font-weight: 500; */
     /* outline: 2px solid tomato; */
-}
+/* } */
 
 .description-section {
     display: flex;
@@ -342,11 +342,25 @@ background-color: #404BBF ;
     /* max-height: 104px; */
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
 .features {
     display: flex;
     gap: 24px;
     height: 104px;
-    width: 1158px;
+    /* width: 1158px; */
 }
 
 .features-list {
